# naqsha-e-safar

./: .gitignore  GEMINI.md  README.md  makefile  pyproject.toml
.github/workflows/: ruff.yml
data/: speedo_routes_with_coords.csv  speedo_sections.geojson
data/speedo/: speedo_routes_hand_cleaned.csv
paper/: README.md  main.typ  makefile  presentation.pptx
scripts/: 01-download-worldpop.py  01-download_worldpop.py  02-osmnx-preprocessing.ipynb  preprocessing.ipynb
src/: GraphCreation.ipynb  Naqsha_e_safar_integration_dummyData.ipynb  community-detection.ipynb  communityDetection.ipynb  constants.py  enhanced_speedo_analysis.ipynb  gnn.ipynb  main.py  preprocessing.ipynb  speedo_routes.py
