[project]
name = "naqsha-e-safar"
version = "0.2.0"
description = "Graph-based analysis of public transit deserts in Lahore."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.6.2",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "osmnx>=2.0.6",
    "pandas>=2.3.3",
    "python-louvain>=0.16",
    "requests>=2.32.5",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.3",
]
